# computer-graphic-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MainWindow/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/BaseWaveform/: BaseWaveform.cpp  BaseWaveform.h
src/CanalOfSignal/: CanalOfSignal.cpp  CanalOfSignal.h
src/FileHandler/: FileHandler.cpp  FileHandler.h  dataStructure.h
